# papodevweb

./: .env.example  .env.production.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  error_mapping.py
backend/app/core/: config.py  constants.py  crypto.py  security.py
backend/app/db/: migrations.py  mongodb.py  seed.py
backend/app/jobs/: retention.py  scheduler.py
backend/app/models/: conversation.py  message.py  user.py
backend/app/realtime/: handlers.py  socket.py
backend/app/repositories/: conversation_repository.py  message_repository.py  object_id.py  settings_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  settings.py  user.py
backend/app/services/: auth_service.py  chat_service.py  email_service.py  (+5 more)
backend/scripts/: promote_admin.py  seed.py
backend/tests/: conftest.py  fakes.py  test_admin_api.py  test_auth_api.py  test_auth_service.py  test_chat_api.py  test_chat_delete.py  test_chat_repositories.py  test_chat_service.py  test_crypto.py  test_db.py  test_email_service.py  test_error_mapping.py  test_factory.py  test_media_integration.py  test_media_service.py  test_message_delete.py  test_migrations.py  test_presence_service.py  test_promote_admin.py  test_realtime.py  test_retention.py  test_security.py  test_seed.py  test_settings_repository.py  test_settings_service.py  test_user_repository.py
(+152 files in other folders)
