[project]
name = "papodevweb-backend"
version = "0.1.0"
description = "Backend do Papo Dev Web — API FastAPI + Socket.IO (clone do WhatsApp Web)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=95"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "app/realtime/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
